@@ -1070,3 +1070,57 @@ function xtec_booking_nodes_name() {
     );
 }
 add_action('admin_init', 'xtec_booking_nodes_name');
+
+
+/**
+ * Add custom tool box Exportador Horaris
+ */
+function add_custom_box_exportador_horaris(){
+?>
+    <style>
+        div.card{
+            max-width: 450px;
+            margin-right: 20px;
+            float: left;
+            min-height: 520px;
+        }
+
+        div.wrap > div.card:nth-child(3) {
+            display: none;
+        }
+    </style>
+    <div class="card">
+        <h2 class="title">Exportador d'horaris</h2>
+        <p>A partir d'un full de càlcul de Google, aquesta eina permet exportar a format web els horaris de cada grup, professor, assignatura o aula. El codi generat es pot inserir fàcilment a qualsevol pàgina de Nodes editant-la i enganxant el codi a la pestanya Text.</p>
+        <p><a href="http://blocs.xtec.cat/coordinaciotac/2015/09/16/exportador-dhoraris-web/" target="_blank"><img src="../wp-content/themes/reactor/custom-tac/imatges/export_hora.png" style="max-width:320px;border:1px solid black"></a></p>
+        <p><a href="http://blocs.xtec.cat/coordinaciotac/2015/09/16/exportador-dhoraris-web/" target="_blank">Enllaç a l'exportador d'horaris</a></p>
+        <p>Desenvolupat per: Felix Tejero</p>
+    </div>
+<?php
+}
+add_action('tool_box','add_custom_box_exportador_horaris');
+
+/**
+ * Add custom tool box Gestor d'esdeveniments
+ */
+function add_custom_box_gestor_esdeveniments(){
+?>
+    <div class="card">
+        <h2 class="title">Gestor de Calendaris</h2>
+        <p>A partir d'un full de càlcul de Google, aquesta eina permet actualitzar els calendaris del curs amb un sol clic. Tanmateix, si afegiu nous esdeveniments als calendaris, s'incorporen al full de càlcul.</p>
+        <p><a href="http://blocs.xtec.cat/coordinaciotac/2015/09/21/gestio-dels-esdeveniments-del-curs/" target="_blank"><img src="../wp-content/themes/reactor/custom-tac/imatges/img_gestor_esdeveniments.png" title="gestor de calendaris"></a></p>
+        <p><a href="http://blocs.xtec.cat/coordinaciotac/2015/09/21/gestio-dels-esdeveniments-del-curs/" target="_blank">Enllaç al gestor de calendaris</a></p>
+        <p>Desenvolupat per: Pepi Garrote</p>
+    </div>
+<?php
+    remove_action('tool_box','bp_core_admin_available_tools_page');
+}
+add_action('tool_box','add_custom_box_gestor_esdeveniments');
+
+/**
+ * Remove box tool buddypress 'bp_core_admin_available_tools_intro'
+ */
+function test_box(){
+    remove_action('tool_box','bp_core_admin_available_tools_intro');
+}
+add_action('admin_init','test_box');
